[gd_scene load_steps=6 format=3 uid="uid://d4c4c1kxcld77"]

[ext_resource type="Texture2D" uid="uid://bthmpa4ix8cxm" path="res://Assets/Tileset/Sprites/Tilesets_Deep_LVL.png" id="1_0j6vp"]
[ext_resource type="Script" path="res://General_Nodes/switch_tile.gd" id="1_djd8g"]
[ext_resource type="PackedScene" uid="uid://c0bqbwk5cf7lp" path="res://Interactions/interaction_area/interaction_area.tscn" id="2_jd6vo"]
[ext_resource type="PackedScene" uid="uid://dmigfjcjd3r57" path="res://General_Nodes/PersistentDataHelper/persistent_data_handler.tscn" id="4_m1arv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vqb4l"]
radius = 12.0

[node name="SwitchTile" type="Node2D"]
script = ExtResource("1_djd8g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0j6vp")
hframes = 2
region_enabled = true
region_rect = Rect2(16, 16, 32, 16)

[node name="InteractionArea" parent="." instance=ExtResource("2_jd6vo")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_vqb4l")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PersistentDataHandler" parent="." instance=ExtResource("4_m1arv")]
